adding kafka producer

--- a/borrower-service/src/main/resources/application.properties
+++ b/borrower-service/src/main/resources/application.properties
@@ -41,3 +41,13 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Validation Configuration
 spring.jpa.defer-datasource-initialization=true
+
+# Kafka Configuration
+spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.ByteArraySerializer
+
+# Kafka Topics
+kafka.topics.borrower-created=borrower-created
+kafka.topics.loan-application=loan-application
+kafka.topics.documents-upload=documents-upload
