officer kafka producer and loan/docuemnts status update

--- a/officer-service/src/main/resources/application.properties
+++ b/officer-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Application Configuration
 spring.application.name=officer-service
-server.port=4002
+server.port=5001
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5000/loan-officer-db
@@ -27,6 +27,8 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 kafka.topics.borrower-created=borrower-created
 kafka.topics.loan-application=loan-application
 kafka.topics.documents-upload=documents-upload
+kafka.topics.loan-status=loan-status
+kafka.topics.document-status=documents-status
 
 # API Documentation
 springdoc.api-docs.path=/api-docs
