borrower kafka consummer

--- a/borrower-service/src/main/resources/application.properties
+++ b/borrower-service/src/main/resources/application.properties
@@ -3,9 +3,22 @@ spring.application.name=borrower-service
 server.port=4001
 
 
-
-# Kafka Configuration
-
+# Kafka Producer Configuration
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.ByteArraySerializer
+
+# Kafka Consumer Configuration for Officer Events
+spring.kafka.consumer.group-id=borrower-service-group
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.listener.ack-mode=manual_immediate
+
+# Kafka Topic Configuration
+kafka.topics.loan-status=loan-status
+kafka.topics.document-status=documents-status
+
+# Logging Configuration
+logging.level.com.pm.borrowerservice.service.OfficerEventConsumerService=INFO
 
