--- a/borrower-service/src/main/resources/application.properties
+++ b/borrower-service/src/main/resources/application.properties
@@ -23,3 +23,6 @@ kafka.topics.document-status=documents-status
 # Logging Configuration
 logging.level.com.pm.borrowerservice.service.OfficerEventConsumerService=INFO
 
+# File upload location for document uploads
+app.file.upload.path=uploads
+
