associte each user with a unique profil

--- a/borrower-service/src/main/resources/application.properties
+++ b/borrower-service/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 spring.application.name=borrower-service
 server.port=4001
 
-
+# Kafka Configuration
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
 
 # Kafka Producer Configuration
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
@@ -17,6 +18,9 @@ spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.listener.ack-mode=manual_immediate
 
 # Kafka Topic Configuration
+kafka.topics.borrower-created=borrower-created
+kafka.topics.loan-application=loan-application
+kafka.topics.documents-upload=documents-upload
 kafka.topics.loan-status=loan-status
 kafka.topics.document-status=documents-status
 
