--- a/officer-service/src/main/resources/application.properties
+++ b/officer-service/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Kafka Configuration
-spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
 spring.kafka.consumer.group-id=officer-service-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
