officer/socre module Rest communication - OpenFeign

--- a/officer-service/pom.xml
+++ b/officer-service/pom.xml
@@ -86,6 +86,12 @@
 			<version>2.6.0</version>
 		</dependency>
 
+		<!-- OpenFeign for microservice communication -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+
 		<!-- Testing -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -102,6 +108,18 @@
 			<artifactId>kafka-clients</artifactId>
 		</dependency>
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>2024.0.0</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
