--- a/loan-score-service/pom.xml
+++ b/loan-score-service/pom.xml
@@ -72,7 +72,8 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
-			<optional>true</optional>
+			<scope>provided</scope>
+
 		</dependency>
 
 		<!-- Swagger/OpenAPI -->
