--- a/officer-service/src/main/resources/application.properties
+++ b/officer-service/src/main/resources/application.properties
@@ -35,6 +35,10 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 
+# External Services Configuration
+# External Services Configuration
+services.loan-score-service.url=${LOAN_SCORE_SERVICE_URL:http://localhost:4003}
+
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
