circuit breaker ffor score module

--- a/officer-service/src/main/resources/application.properties
+++ b/officer-service/src/main/resources/application.properties
@@ -39,6 +39,26 @@ springdoc.swagger-ui.operationsSorter=method
 # External Services Configuration
 services.loan-score-service.url=${LOAN_SCORE_SERVICE_URL:http://localhost:4003}
 
+# Resilience4j Circuit Breaker Configuration
+resilience4j.circuitbreaker.instances.loan-score-service.register-health-indicator=true
+resilience4j.circuitbreaker.instances.loan-score-service.sliding-window-size=10
+resilience4j.circuitbreaker.instances.loan-score-service.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.loan-score-service.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.loan-score-service.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.loan-score-service.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.instances.loan-score-service.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.loan-score-service.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.loan-score-service.record-exceptions=java.io.IOException,java.util.concurrent.TimeoutException,org.springframework.web.client.ResourceAccessException
+
+# Resilience4j Retry Configuration
+resilience4j.retry.instances.loan-score-service.max-attempts=3
+resilience4j.retry.instances.loan-score-service.wait-duration=1s
+resilience4j.retry.instances.loan-score-service.retry-exceptions=java.io.IOException,java.util.concurrent.TimeoutException
+
+# Resilience4j TimeLimiter Configuration
+resilience4j.timelimiter.instances.loan-score-service.timeout-duration=3s
+resilience4j.timelimiter.instances.loan-score-service.cancel-running-future=true
+
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
