--- a/borrower-service/src/main/resources/application.properties
+++ b/borrower-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=borrower-service
 server.port=4001
 
 # Kafka Configuration
-spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
 
 # Kafka Producer Configuration
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
