--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -22,6 +22,14 @@ spring:
                 - StripPrefix=1
                 - OfficerValidation
 
+            - id: officer-borrower-route
+              uri: http://loan-officer-service:4002
+              predicates:
+                - Path=/borrower/**
+              filters:
+                - StripPrefix=1
+                - JwtValidation
+
             - id: officer-health-route
               uri: http://loan-officer-service:4002
               predicates:
