--- a/loan-score-service/pom.xml
+++ b/loan-score-service/pom.xml
@@ -100,6 +100,10 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -111,6 +115,10 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
 		</dependencies>
 	</dependencyManagement>
 
