--- a/officer-service/pom.xml
+++ b/officer-service/pom.xml
@@ -127,6 +127,10 @@
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-clients</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -138,6 +142,10 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
 		</dependencies>
 	</dependencyManagement>
 
